Criado a página de search-results e seus estilos.

--- a/create-point.html
+++ b/create-point.html
@@ -17,13 +17,13 @@
 
         <header>
             <img src="/assets/logo.svg" alt="logomarca">
-            <a href="#">
+            <a href="/index.html">
                 <span></span>
                 Voltar para a Home
             </a>
         </header>
 
-        <form action="">
+        <form action="/search-results.html">
             <h1>Cadastro do ponto de coleta</h1>
 
             <fieldset>
@@ -93,11 +93,11 @@
 
                 </div>
 
-                <input type="hidden" name="items" value>
+                <input type="hidden" name="items" required>
 
             </fieldset>
 
-            <button type="submit">Cadastrar ponto de coleta</button>
+            <button type="submit" id="submit">Cadastrar ponto de coleta</button>
         </form>
     </div>
 
