--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/modal.css">
+
     <link rel="stylesheet" href="./styles/responsive.css">
 </head>
 
@@ -17,7 +19,7 @@
         <div class="content">
             <header>
                 <img src="/assets/logo.svg" alt="logomarca">
-                <a href="#">
+                <a href="/create-point.html">
                     <span></span>
                     Cadastre um ponto de coleta
                 </a>
@@ -30,6 +32,25 @@
         </div>
 
     </div>
+
+    <div id="modal" class="hide">
+        <div class="content">
+            <div class="header">
+                <h1>Pontos de Coleta</h1>
+                <a href="#">Fechar</a>
+            </div>
+            <form action="">
+                <label for="search">Cidade</label>
+                <div class="search field">
+                    <input type="text" name="search" placeholder="Pesquisar por cidade">
+                    <button type="button">
+                        <img src="./assets/search.svg" alt="buscar">
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+<script src="./scripts/index.js"></script>
 </body>
 
 </html>
